--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "pagerfanta/pagerfanta": "~2.0",
         "doctrine/common": "^2.4.8",
         "psr/log": "~1.0",
-        "sensio/framework-extra-bundle": "^5.0"
+        "sensio/framework-extra-bundle": "^3.0|^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.7"
